[package]
name = "manager"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
dotenv = "0.15.0"

[dependencies]
tauri = { version = "1.5", features = [
  "window-start-dragging",
  "os-all",
  "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
objc = "0.2.7"
cocoa = "0.25.0"
serde_json = "1.0"
keyring = "2.0.5"
preferences = "1.1.0"
whoami = "1.4.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
